New models, new parser, new all

--- a/olcalc/static/css/styles.css
+++ b/olcalc/static/css/styles.css
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
-    background: white;
+    /*background: white;*/
 }
 
 .fa {
@@ -21,6 +21,7 @@ body {
 .jumbotron {
     margin-bottom:0;
 }
+
 
 .navbar {
     margin-bottom:0;
