--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,18 +21,8 @@
 </head>
 
 <body>
-
     <header>
-        <div class="jumbotron d-none d-sm-block my-0 py-0">
-            <div class="container my-0">
-                <h1 class="display-4">Льготы победителям и призерам олимпиад</h1>
-                <p class="lead">Какие льготы можно получить за олимпиаду? Какие ВУЗы ее принимают? Где БВИ, а где всего-лишь ИД?</p>
-                <p class="lead">Мы поможем найти ответ!</p>
-            </div>
-        </div>
-
-
-        <nav class="navbar navbar-expand-md navbar-light bg-light my-0 ">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark my-0 ">
             <div class="container">
                 <a class="navbar-brand" href="../">AbitInfo</a>
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#header-links">
@@ -47,6 +36,14 @@
                 </div>
             </div>
         </nav>
+
+        <div class="jumbotron d-none d-sm-block my-0 py-0">
+            <div class="container my-0">
+                <h1 class="display-4">Льготы победителям и призерам олимпиад</h1>
+                <p class="lead">Какие льготы можно получить за олимпиаду? Какие ВУЗы ее принимают? Где БВИ, а где всего-лишь ИД?</p>
+                <p class="lead">Мы поможем найти ответ!</p>
+            </div>
+        </div>
     </header>
 
     {% block content %}
