--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -30,8 +30,9 @@
                 </button>
                 <div class="navbar-collapse collapse" id="header-links">
                     <ul class="navbar-nav m-auto">
-                        {% block navbar_buttons %}
-                        {% endblock %}
+                            <li class="nav-item active">
+                                <a class="nav-link" href="../">Главная</a>
+                            </li>
                     </ul>
                 </div>
             </div>
