--- a/olcalc/templates/olcalc/test.html
+++ b/olcalc/templates/olcalc/test.html
@@ -1,43 +1,24 @@
 {% extends 'olcalc/base.html' %}
 
 {% block title %}
-    <title>AbitInfo | Дичь</title>
+    <title>AbitInfo | Олимпиадный справочник</title>
 {% endblock %}
 
 {% block navbar_buttons%}
-    <li class="nav-item">
-        <a class="nav-link" href='/'>Главная</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Статьи</a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link" href="#">О нас</a>
-    </li>
-    
     <li class="nav-item active">
-        <a class="nav-link" href="#">Тестовая</a>
+        <a class="nav-link" href="../">Главная</a>
     </li>
 {% endblock %}
-    
+
 {% block content %}
-    <div class="jumbotron d-none d-sm-block">
-        <div class="container">
-            <h1 class="display-4">Здесь тестирую всякое</h1>
-            <p class="lead">Где можно все сломать? Здесь!</p>
-        </div>
-    </div>
 
     <main role="main" class="container" style="margin-top: 50px;">
 
-        
-        
-        <form action="/search/" method="get">
+        <form action="/test_search/" method="get">
             <div class="form-group">
                 <div class="form-group form-inline">
                     <select class="form-control" id="olymp_name" name="olymp_name" style="width: 300px;">
-                       <option value="" disabled selected>Название олимпиады</option>
+                       <option  value="" disabled selected>Название олимпиады</option>
                         {% for olymp in olymps %}
                             <option>{{olymp}}</option>
                         {% endfor %}
@@ -45,49 +26,33 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-dark" value="Search">Узнать льготы</button>
+            <button type="submit" class="btn btn-dark" value="test_search">Узнать льготы</button>
         </form>
-        
-        {% if olymp_name.title in olymps|title %} <!-- Здесь костыль, 'ab ab'.title -> 'Ab Ab' -->
-           
+
+         <!-- Здесь костыль, 'ab ab'.title -> 'Ab Ab' -->
             <p>Результат показан для олимпиады: <strong>{{ olymp_name }}</strong></p>
             <div class="table-responsive">
                 <table class="table" >
                     <tr class="bg-dark" style="color: aliceblue">
-                        <th>#</th>
                         <th>ВУЗ</th>
                         <th>Факультет</th>
                         <th>Специальность</th>
                         <th>Льгота</th>
                         <th>Проходной балл</th>
-                        <th>Военная кафедра</th>
-
                     </tr>
                     {% for univer in univers%}
                         <tr>
                             <td>{{univer.rating}}</td>
                             <td>{{univer.title}}</td>
-                            <td>{{univer.f_title}}</td>
                             <td>{{univer.s_title}}</td>
                             <td>{{univer.privilege}}</td>
                             <td>{{univer.passing_score}}</td>
-
-                            <td>
-                                {% if univer.army_cafedra %}
-                                    <p>Есть</p>
-                                {% else %}
-                                    <p>Нет</p>
-                                {% endif %}
-                            </td>
                         </tr>
 
 
                     {% endfor%}
                 </table>
             </div>
-        {% endif %}
-        
-       
 
     </main>
 
