--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -33,6 +33,12 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="../">Главная</a>
                             </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="../blog">Блог</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="../project">О проекте</a>
+                            </li>
                     </ul>
                 </div>
             </div>
@@ -40,9 +46,9 @@
 
         <div class="jumbotron d-none d-sm-block my-0 py-0">
             <div class="container my-0">
-                <h1 class="display-4">Льготы победителям и призерам олимпиад</h1>
-                <p class="lead">Какие льготы можно получить за олимпиаду? Какие ВУЗы ее принимают? Где БВИ, а где всего-лишь ИД?</p>
-                <p class="lead">Мы поможем найти ответ!</p>
+                <h2 class="display-5">Поступить легко!</h2>
+                <p class="lead">Олимпиад очень много, и не ясно, какие из них нужно писать, а какие нет.
+                    <br>Мы прошли через это и поможем вам!</p>
             </div>
         </div>
     </header>
@@ -66,6 +72,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <!--Bootstrap lightbox js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
 
 </body>
 </html>
