--- a/olcalc/templates/olcalc/index.html
+++ b/olcalc/templates/olcalc/index.html
@@ -14,16 +14,23 @@
                     <select class="form-control" id="olymp_name" name="olymp_name" style="width: 300px;">
                        <option  value="" disabled selected>Название олимпиады</option>
                         {% for olymp in olymps %}
-                            <option>{{olymp.title}} по предмету {{olymp.subject}}</option>
+                            <option>{{olymp.title}}</option>
                         {% endfor %}
                     </select>
+                    <select class="form-control" id="olymp_subject" name="olymp_subject" style="width: 300px;">
+                       <option  value="" disabled selected>По предмету</option>
+                        {% for olymp in olymps %}
+                            <option>{{olymp.subject}}</option>
+                        {% endfor %}
+                    </select>
+
                 </div>
             </div>
 
             <button type="submit" class="btn btn-dark" value="Search">Узнать льготы</button>
         </form>
 
-        {% if olymp_name.title in olymps|title %} <!-- Здесь костыль, 'ab ab'.title -> 'Ab Ab' -->
+        {% if olymp_name.title in olymps|title%} <!-- Здесь костыль, 'ab ab'.title -> 'Ab Ab' -->
             <p>Результат показан для олимпиады: <strong>{{ olymp_name }}</strong></p>
             <div class="table-responsive">
                 <table class="table" >
@@ -34,7 +41,9 @@
                         <th>Степень диплома</th>
                         <th>Льгота</th>
                     </tr>
+                     p {{olymp_name}} p
                     {% for q in qmap%}
+                    <p>{{q.olymp.title}}</p>
                         <tr>
                             <td>{{q.unifac.faculty.university.title}}</td>
                             <td>{{q.unifac.faculty.title}}</td>
